SqlParser.output
Terminals unused in grammar

   ADD
   ALTER
   ANALYZE
   BEFORE
   CALL
   CASCADE
   CHANGE
   CHECK
   COLUMN
   CONDITION
   CONSTRAINT
   CONTINUE
   CONVERT
   CURRENT_USER
   CURSOR
   DATABASES
   DECLARE
   DESCRIBE
   DETERMINISTIC
   DIV
   DROP
   DUAL
   EACH
   ELSEIF
   ENCLOSED
   ESCAPED
   EXIT
   EXPLAIN
   FETCH
   FOREIGN
   GRANT
   INFILE
   INOUT
   INSENSITIVE
   ITERATE
   KEYS
   KILL
   LEAVE
   LINES
   LOAD
   LOCALTIME
   LOCALTIMESTAMP
   LOCK
   LONG
   LOOP
   MATCH
   MINUTE_MICROSECOND
   MINUTE_SECOND
   MODIFIES
   NO_WRITE_TO_BINLOG
   NUMBER
   OPTIMIZE
   OPTION
   OPTIONALLY
   OUT
   OUTFILE
   PRECISION
   PROCEDURE
   PURGE
   READ
   READS
   REFERENCES
   RELEASE
   RENAME
   REPEAT
   REQUIRE
   RESTRICT
   RETURN
   REVOKE
   SCHEMAS
   SECOND_MICROSECOND
   SENSITIVE
   SEPARATOR
   SHOW
   SONAME
   SPATIAL
   SPECIFIC
   SQL
   SQLEXCEPTION
   SQLSTATE
   SQLWARNING
   SSL
   STARTING
   TERMINATED
   TO
   TRIGGER
   UNDO
   UNION
   UNLOCK
   USAGE
   UTC_DATE
   UTC_TIME
   UTC_TIMESTAMP
   VARYING
   WHILE
   WRITE


语法

    0 $accept: stmt_list $end

    1 stmt_list: stmt ';'
    2          | stmt_list stmt ';'

    3 expr: NAME
    4     | NAME '.' NAME
    5     | USERVAR
    6     | STRING
    7     | INTNUM
    8     | APPROXNUM
    9     | BOOL
   10     | expr '+' expr
   11     | expr '-' expr
   12     | expr '*' expr
   13     | expr '/' expr
   14     | expr '%' expr
   15     | expr MOD expr
   16     | '-' expr
   17     | expr ANDOP expr
   18     | expr OR expr
   19     | expr XOR expr
   20     | expr '|' expr
   21     | expr '&' expr
   22     | expr '^' expr
   23     | expr SHIFT expr
   24     | NOT expr
   25     | '!' expr
   26     | expr COMPARISON expr
   27     | expr COMPARISON '(' select_stmt ')'
   28     | expr COMPARISON ANY '(' select_stmt ')'
   29     | expr COMPARISON SOME '(' select_stmt ')'
   30     | expr COMPARISON ALL '(' select_stmt ')'
   31     | expr IS NULLX
   32     | expr IS NOT NULLX
   33     | expr IS BOOL
   34     | expr IS NOT BOOL
   35     | USERVAR ASSIGN expr
   36     | expr BETWEEN expr AND expr

   37 val_list: expr
   38         | expr ',' val_list

   39 opt_val_list: %empty
   40             | val_list

   41 expr: expr IN '(' val_list ')'
   42     | expr NOT IN '(' val_list ')'
   43     | expr IN '(' select_stmt ')'
   44     | expr NOT IN '(' select_stmt ')'
   45     | EXISTS '(' select_stmt ')'
   46     | NAME '(' opt_val_list ')'
   47     | FCOUNT '(' '*' ')'
   48     | FCOUNT '(' expr ')'
   49     | FSUBSTRING '(' val_list ')'
   50     | FSUBSTRING '(' expr FROM expr ')'
   51     | FSUBSTRING '(' expr FROM expr FOR expr ')'
   52     | FTRIM '(' val_list ')'
   53     | FTRIM '(' trim_ltb expr FROM val_list ')'

   54 trim_ltb: LEADING
   55         | TRAILING
   56         | BOTH

   57 expr: FDATE_ADD '(' expr ',' interval_exp ')'
   58     | FDATE_SUB '(' expr ',' interval_exp ')'

   59 interval_exp: INTERVAL expr DAY_HOUR
   60             | INTERVAL expr DAY_MICROSECOND
   61             | INTERVAL expr DAY_MINUTE
   62             | INTERVAL expr DAY_SECOND
   63             | INTERVAL expr YEAR_MONTH
   64             | INTERVAL expr YEAR
   65             | INTERVAL expr HOUR_MICROSECOND
   66             | INTERVAL expr HOUR_MINUTE
   67             | INTERVAL expr HOUR_SECOND

   68 expr: CASE expr case_list END
   69     | CASE expr case_list ELSE expr END
   70     | CASE case_list END
   71     | CASE case_list ELSE expr END

   72 case_list: WHEN expr THEN expr
   73          | case_list WHEN expr THEN expr

   74 expr: expr LIKE expr
   75     | expr NOT LIKE expr
   76     | expr REGEXP expr
   77     | expr NOT REGEXP expr
   78     | CURRENT_TIMESTAMP
   79     | CURRENT_DATE
   80     | CURRENT_TIME
   81     | BINARY expr

   82 stmt: select_stmt

   83 select_stmt: SELECT select_opts select_expr_list
   84            | SELECT select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

   85 opt_where: %empty
   86          | WHERE expr

   87 opt_groupby: %empty
   88            | GROUP BY groupby_list opt_with_rollup

   89 groupby_list: expr opt_asc_desc
   90             | groupby_list ',' expr opt_asc_desc

   91 opt_asc_desc: %empty
   92             | ASC
   93             | DESC

   94 opt_with_rollup: %empty
   95                | WITH ROLLUP

   96 opt_having: %empty
   97           | HAVING expr

   98 opt_orderby: %empty
   99            | ORDER BY groupby_list

  100 opt_limit: %empty
  101          | LIMIT expr
  102          | LIMIT expr ',' expr

  103 opt_into_list: %empty
  104              | INTO column_list

  105 column_list: NAME
  106            | column_list ',' NAME

  107 select_opts: %empty
  108            | select_opts ALL
  109            | select_opts DISTINCT
  110            | select_opts DISTINCTROW
  111            | select_opts HIGH_PRIORITY
  112            | select_opts STRAIGHT_JOIN
  113            | select_opts SQL_SMALL_RESULT
  114            | select_opts SQL_BIG_RESULT
  115            | select_opts SQL_CALC_FOUND_ROWS

  116 select_expr_list: select_expr
  117                 | select_expr_list ',' select_expr
  118                 | '*'

  119 select_expr: expr opt_as_alias

  120 opt_as_alias: AS NAME
  121             | NAME
  122             | %empty

  123 table_references: table_reference
  124                 | table_references ',' table_reference

  125 table_reference: table_factor
  126                | join_table

  127 table_factor: NAME opt_as_alias index_hint
  128             | NAME '.' NAME opt_as_alias index_hint
  129             | table_subquery opt_as NAME
  130             | '(' table_references ')'

  131 opt_as: AS
  132       | %empty

  133 join_table: table_reference opt_inner_cross JOIN table_factor opt_join_condition
  134           | table_reference STRAIGHT_JOIN table_factor
  135           | table_reference STRAIGHT_JOIN table_factor ON expr
  136           | table_reference left_or_right opt_outer JOIN table_factor join_condition
  137           | table_reference NATURAL opt_left_or_right_outer JOIN table_factor

  138 opt_inner_cross: %empty
  139                | INNER
  140                | CROSS

  141 opt_outer: %empty
  142          | OUTER

  143 left_or_right: LEFT
  144              | RIGHT

  145 opt_left_or_right_outer: LEFT opt_outer
  146                        | RIGHT opt_outer
  147                        | %empty

  148 opt_join_condition: %empty
  149                   | join_condition

  150 join_condition: ON expr
  151               | USING '(' column_list ')'

  152 index_hint: USE KEY opt_for_join '(' index_list ')'
  153           | IGNORE KEY opt_for_join '(' index_list ')'
  154           | FORCE KEY opt_for_join '(' index_list ')'
  155           | %empty

  156 opt_for_join: FOR JOIN
  157             | %empty

  158 index_list: NAME
  159           | index_list ',' NAME

  160 table_subquery: '(' select_stmt ')'

  161 stmt: delete_stmt

  162 delete_stmt: DELETE delete_opts FROM NAME opt_where opt_orderby opt_limit

  163 delete_opts: delete_opts LOW_PRIORITY
  164            | delete_opts QUICK
  165            | delete_opts IGNORE
  166            | %empty

  167 delete_stmt: DELETE delete_opts delete_list FROM table_references opt_where

  168 delete_list: NAME opt_dot_star
  169            | delete_list ',' NAME opt_dot_star

  170 opt_dot_star: %empty
  171             | '.' '*'

  172 delete_stmt: DELETE delete_opts FROM delete_list USING table_references opt_where

  173 stmt: insert_stmt

  174 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate

  175 opt_ondupupdate: %empty
  176                | ONDUPLICATE KEY UPDATE insert_asgn_list

  177 insert_opts: %empty
  178            | insert_opts LOW_PRIORITY
  179            | insert_opts DELAYED
  180            | insert_opts HIGH_PRIORITY
  181            | insert_opts IGNORE

  182 opt_into: INTO
  183         | %empty

  184 opt_col_names: %empty
  185              | '(' column_list ')'

  186 insert_vals_list: '(' insert_vals ')'
  187                 | insert_vals_list ',' '(' insert_vals ')'

  188 insert_vals: expr
  189            | DEFAULT
  190            | insert_vals ',' expr
  191            | insert_vals ',' DEFAULT

  192 insert_stmt: INSERT insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate

  193 insert_asgn_list: NAME COMPARISON expr
  194                 | NAME COMPARISON DEFAULT
  195                 | insert_asgn_list ',' NAME COMPARISON expr
  196                 | insert_asgn_list ',' NAME COMPARISON DEFAULT

  197 insert_stmt: INSERT insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  198 stmt: replace_stmt

  199 replace_stmt: REPLACE insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  200             | REPLACE insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  201             | REPLACE insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

  202 stmt: update_stmt

  203 update_stmt: UPDATE update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

  204 update_opts: %empty
  205            | insert_opts LOW_PRIORITY
  206            | insert_opts IGNORE

  207 update_asgn_list: NAME COMPARISON expr
  208                 | NAME '.' NAME COMPARISON expr
  209                 | update_asgn_list ',' NAME COMPARISON expr
  210                 | update_asgn_list ',' NAME '.' NAME COMPARISON expr

  211 stmt: create_database_stmt

  212 create_database_stmt: CREATE DATABASE opt_if_not_exists NAME
  213                     | CREATE SCHEMA opt_if_not_exists NAME

  214 opt_if_not_exists: %empty
  215                  | IF EXISTS

  216 stmt: create_table_stmt

  217 create_table_stmt: CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  218                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  219                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  220                  | CREATE opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  221                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

  223 opt_temporary: %empty
  224              | TEMPORARY

  225 create_col_list: create_definition
  226                | create_col_list ',' create_definition

  227 create_definition: PRIMARY KEY '(' column_list ')'
  228                  | KEY '(' column_list ')'
  229                  | INDEX '(' column_list ')'
  230                  | FULLTEXT INDEX '(' column_list ')'
  231                  | FULLTEXT KEY '(' column_list ')'

  232 $@1: %empty

  233 create_definition: $@1 NAME data_type column_atts

  234 column_atts: %empty
  235            | column_atts NOT NULLX
  236            | column_atts NULLX
  237            | column_atts DEFAULT STRING
  238            | column_atts DEFAULT INTNUM
  239            | column_atts DEFAULT APPROXNUM
  240            | column_atts DEFAULT BOOL
  241            | column_atts AUTO_INCREMENT
  242            | column_atts UNIQUE '(' column_list ')'
  243            | column_atts UNIQUE KEY
  244            | column_atts PRIMARY KEY
  245            | column_atts KEY
  246            | column_atts COMMENT STRING

  247 opt_length: %empty
  248           | '(' INTNUM ')'
  249           | '(' INTNUM ',' INTNUM ')'

  250 opt_binary: %empty
  251           | BINARY

  252 opt_uz: %empty
  253       | opt_uz UNSIGNED
  254       | opt_uz ZEROFILL

  255 opt_csc: %empty
  256        | opt_csc CHAR SET STRING
  257        | opt_csc COLLATE STRING

  258 data_type: BIT opt_length
  259          | TINYINT opt_length opt_uz
  260          | SMALLINT opt_length opt_uz
  261          | MEDIUMINT opt_length opt_uz
  262          | INT opt_length opt_uz
  263          | INTEGER opt_length opt_uz
  264          | BIGINT opt_length opt_uz
  265          | REAL opt_length opt_uz
  266          | DOUBLE opt_length opt_uz
  267          | FLOAT opt_length opt_uz
  268          | DECIMAL opt_length opt_uz
  269          | DATE
  270          | TIME
  271          | TIMESTAMP
  272          | DATETIME
  273          | YEAR
  274          | CHAR opt_length opt_csc
  275          | VARCHAR '(' INTNUM ')' opt_csc
  276          | BINARY opt_length
  277          | VARBINARY '(' INTNUM ')'
  278          | TINYBLOB
  279          | BLOB
  280          | MEDIUMBLOB
  281          | LONGBLOB
  282          | TINYTEXT opt_binary opt_csc
  283          | TEXT opt_binary opt_csc
  284          | MEDIUMTEXT opt_binary opt_csc
  285          | LONGTEXT opt_binary opt_csc
  286          | ENUM '(' enum_list ')' opt_csc
  287          | SET '(' enum_list ')' opt_csc

  288 enum_list: STRING
  289          | enum_list ',' STRING

  290 create_select_statement: opt_ignore_replace opt_as select_stmt

  291 opt_ignore_replace: %empty
  292                   | IGNORE
  293                   | REPLACE

  294 stmt: set_stmt

  295 set_stmt: SET set_list

  296 set_list: set_expr
  297         | set_list ',' set_expr

  298 set_expr: USERVAR COMPARISON expr
  299         | USERVAR ASSIGN expr


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'%' (37) 14
'&' (38) 21
'(' (40) 27 28 29 30 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 130
    151 152 153 154 160 185 186 187 217 218 219 221 227 228 229 230
    231 242 248 249 275 277 286 287
')' (41) 27 28 29 30 41 42 43 44 45 46 47 48 49 50 51 52 53 57 58 130
    151 152 153 154 160 185 186 187 217 218 219 221 227 228 229 230
    231 242 248 249 275 277 286 287
'*' (42) 12 47 118 171
'+' (43) 10
',' (44) 38 57 58 90 102 106 117 124 159 169 187 190 191 195 196 209
    210 226 249 289 297
'-' (45) 11 16
'.' (46) 4 128 171 208 210 218 221 222
'/' (47) 13
';' (59) 1 2
'^' (94) 22
'|' (124) 20
error (256)
NAME (258) 3 4 46 105 106 120 121 127 128 129 158 159 162 168 169 174
    192 193 194 195 196 197 199 200 201 207 208 209 210 212 213 217
    218 219 220 221 222 233
STRING (259) 6 237 246 256 257 288 289
INTNUM (260) 7 238 248 249 275 277
BOOL (261) 9 33 34 240
APPROXNUM (262) 8 239
USERVAR (263) 5 35 298 299
ASSIGN (264) 35 299
OR (265) 18
XOR (266) 19
ANDOP (267) 17
IN (268) 41 42 43 44
IS (269) 31 32 33 34
LIKE (270) 74 75
REGEXP (271) 76 77
NOT (272) 24 32 34 42 44 75 77 235
BETWEEN (273) 36
COMPARISON (274) 26 27 28 29 30 193 194 195 196 207 208 209 210 298
SHIFT (275) 23
MOD (276) 15
UMINUS (277)
ADD (278)
ALL (279) 30 108
ALTER (280)
ANALYZE (281)
AND (282) 36
ANY (283) 28
AS (284) 120 131
ASC (285) 92
AUTO_INCREMENT (286) 241
BEFORE (287)
BIGINT (288) 264
BINARY (289) 81 251 276
BIT (290) 258
BLOB (291) 279
BOTH (292) 56
BY (293) 88 99
CALL (294)
CASCADE (295)
CASE (296) 68 69 70 71
CHANGE (297)
CHAR (298) 256 274
CHECK (299)
COLLATE (300) 257
COLUMN (301)
COMMENT (302) 246
CONDITION (303)
CONSTRAINT (304)
CONTINUE (305)
CONVERT (306)
CREATE (307) 212 213 217 218 219 220 221 222
CROSS (308) 140
CURRENT_DATE (309) 79
CURRENT_TIME (310) 80
CURRENT_TIMESTAMP (311) 78
CURRENT_USER (312)
CURSOR (313)
DATABASE (314) 212
DATABASES (315)
DATE (316) 269
DATETIME (317) 272
DAY_HOUR (318) 59
DAY_MICROSECOND (319) 60
DAY_MINUTE (320) 61
DAY_SECOND (321) 62
DECIMAL (322) 268
DECLARE (323)
DEFAULT (324) 189 191 194 196 237 238 239 240
DELAYED (325) 179
DELETE (326) 162 167 172
DESC (327) 93
DESCRIBE (328)
DETERMINISTIC (329)
DISTINCT (330) 109
DISTINCTROW (331) 110
DIV (332)
DOUBLE (333) 266
DROP (334)
DUAL (335)
EACH (336)
ELSE (337) 69 71
ELSEIF (338)
ENCLOSED (339)
END (340) 68 69 70 71
ENUM (341) 286
ESCAPED (342)
EXISTS (343) 45 215
EXIT (344)
EXPLAIN (345)
FETCH (346)
FLOAT (347) 267
FOR (348) 51 156
FORCE (349) 154
FOREIGN (350)
FROM (351) 50 51 53 84 162 167 172
FULLTEXT (352) 230 231
GRANT (353)
GROUP (354) 88
HAVING (355) 97
HIGH_PRIORITY (356) 111 180
HOUR_MICROSECOND (357) 65
HOUR_MINUTE (358) 66
HOUR_SECOND (359) 67
IF (360) 215
IGNORE (361) 153 165 181 206 292
INDEX (362) 229 230
INFILE (363)
INNER (364) 139
INOUT (365)
INSENSITIVE (366)
INSERT (367) 174 192 197
INT (368) 262
INTEGER (369) 263
INTERVAL (370) 59 60 61 62 63 64 65 66 67
INTO (371) 104 182
ITERATE (372)
JOIN (373) 133 136 137 156
KEY (374) 152 153 154 176 227 228 231 243 244 245
KEYS (375)
KILL (376)
LEADING (377) 54
LEAVE (378)
LEFT (379) 143 145
LIMIT (380) 101 102
LINES (381)
LOAD (382)
LOCALTIME (383)
LOCALTIMESTAMP (384)
LOCK (385)
LONG (386)
LONGBLOB (387) 281
LONGTEXT (388) 285
LOOP (389)
LOW_PRIORITY (390) 163 178 205
MATCH (391)
MEDIUMBLOB (392) 280
MEDIUMINT (393) 261
MEDIUMTEXT (394) 284
MINUTE_MICROSECOND (395)
MINUTE_SECOND (396)
MODIFIES (397)
NATURAL (398) 137
NO_WRITE_TO_BINLOG (399)
NULLX (400) 31 32 235 236
NUMBER (401)
ON (402) 135 150
ONDUPLICATE (403) 176
OPTIMIZE (404)
OPTION (405)
OPTIONALLY (406)
ORDER (407) 99
OUT (408)
OUTER (409) 142
OUTFILE (410)
PRECISION (411)
PRIMARY (412) 227 244
PROCEDURE (413)
PURGE (414)
QUICK (415) 164
READ (416)
READS (417)
REAL (418) 265
REFERENCES (419)
RELEASE (420)
RENAME (421)
REPEAT (422)
REPLACE (423) 199 200 201 293
REQUIRE (424)
RESTRICT (425)
RETURN (426)
REVOKE (427)
RIGHT (428) 144 146
ROLLUP (429) 95
SCHEMA (430) 213
SCHEMAS (431)
SECOND_MICROSECOND (432)
SELECT (433) 83 84
SENSITIVE (434)
SEPARATOR (435)
SET (436) 192 200 203 256 287 295
SHOW (437)
SMALLINT (438) 260
SOME (439) 29
SONAME (440)
SPATIAL (441)
SPECIFIC (442)
SQL (443)
SQLEXCEPTION (444)
SQLSTATE (445)
SQLWARNING (446)
SQL_BIG_RESULT (447) 114
SQL_CALC_FOUND_ROWS (448) 115
SQL_SMALL_RESULT (449) 113
SSL (450)
STARTING (451)
STRAIGHT_JOIN (452) 112 134 135
TABLE (453) 217 218 219 220 221 222
TEMPORARY (454) 224
TEXT (455) 283
TERMINATED (456)
THEN (457) 72 73
TIME (458) 270
TIMESTAMP (459) 271
TINYBLOB (460) 278
TINYINT (461) 259
TINYTEXT (462) 282
TO (463)
TRAILING (464) 55
TRIGGER (465)
UNDO (466)
UNION (467)
UNIQUE (468) 242 243
UNLOCK (469)
UNSIGNED (470) 253
UPDATE (471) 176 203
USAGE (472)
USE (473) 152
USING (474) 151 172
UTC_DATE (475)
UTC_TIME (476)
UTC_TIMESTAMP (477)
VALUES (478) 174 199
VARBINARY (479) 277
VARCHAR (480) 275
VARYING (481)
WHEN (482) 72 73
WHERE (483) 86
WHILE (484)
WITH (485) 95
WRITE (486)
YEAR (487) 64 273
YEAR_MONTH (488) 63
ZEROFILL (489) 254
FSUBSTRING (490) 49 50 51
FTRIM (491) 52 53
FDATE_ADD (492) 57
FDATE_SUB (493) 58
FCOUNT (494) 47 48


Nonterminals, with rules where they appear

$accept (254)
    on left: 0
stmt_list (255)
    on left: 1 2, on right: 0 2
expr (256)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 41 42 43 44 45 46 47 48
    49 50 51 52 53 57 58 68 69 70 71 74 75 76 77 78 79 80 81, on right:
    10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
    31 32 33 34 35 36 37 38 41 42 43 44 48 50 51 53 57 58 59 60 61
    62 63 64 65 66 67 68 69 71 72 73 74 75 76 77 81 86 89 90 97 101
    102 119 135 150 188 190 193 195 207 208 209 210 298 299
val_list (257)
    on left: 37 38, on right: 38 40 41 42 49 52 53
opt_val_list (258)
    on left: 39 40, on right: 46
trim_ltb (259)
    on left: 54 55 56, on right: 53
interval_exp (260)
    on left: 59 60 61 62 63 64 65 66 67, on right: 57 58
case_list (261)
    on left: 72 73, on right: 68 69 70 71 73
stmt (262)
    on left: 82 161 173 198 202 211 216 294, on right: 1 2
select_stmt (263)
    on left: 83 84, on right: 27 28 29 30 43 44 45 82 160 197 201 290
opt_where (264)
    on left: 85 86, on right: 84 162 167 172 203
opt_groupby (265)
    on left: 87 88, on right: 84
groupby_list (266)
    on left: 89 90, on right: 88 90 99
opt_asc_desc (267)
    on left: 91 92 93, on right: 89 90
opt_with_rollup (268)
    on left: 94 95, on right: 88
opt_having (269)
    on left: 96 97, on right: 84
opt_orderby (270)
    on left: 98 99, on right: 84 162 203
opt_limit (271)
    on left: 100 101 102, on right: 84 162 203
opt_into_list (272)
    on left: 103 104, on right: 84
column_list (273)
    on left: 105 106, on right: 104 106 151 185 227 228 229 230 231
    242
select_opts (274)
    on left: 107 108 109 110 111 112 113 114 115, on right: 83 84 108
    109 110 111 112 113 114 115
select_expr_list (275)
    on left: 116 117 118, on right: 83 84 117
select_expr (276)
    on left: 119, on right: 116 117
opt_as_alias (277)
    on left: 120 121 122, on right: 119 127 128
table_references (278)
    on left: 123 124, on right: 84 124 130 167 172 203
table_reference (279)
    on left: 125 126, on right: 123 124 133 134 135 136 137
table_factor (280)
    on left: 127 128 129 130, on right: 125 133 134 135 136 137
opt_as (281)
    on left: 131 132, on right: 129 290
join_table (282)
    on left: 133 134 135 136 137, on right: 126
opt_inner_cross (283)
    on left: 138 139 140, on right: 133
opt_outer (284)
    on left: 141 142, on right: 136 145 146
left_or_right (285)
    on left: 143 144, on right: 136
opt_left_or_right_outer (286)
    on left: 145 146 147, on right: 137
opt_join_condition (287)
    on left: 148 149, on right: 133
join_condition (288)
    on left: 150 151, on right: 136 149
index_hint (289)
    on left: 152 153 154 155, on right: 127 128
opt_for_join (290)
    on left: 156 157, on right: 152 153 154
index_list (291)
    on left: 158 159, on right: 152 153 154 159
table_subquery (292)
    on left: 160, on right: 129
delete_stmt (293)
    on left: 162 167 172, on right: 161
delete_opts (294)
    on left: 163 164 165 166, on right: 162 163 164 165 167 172
delete_list (295)
    on left: 168 169, on right: 167 169 172
opt_dot_star (296)
    on left: 170 171, on right: 168 169
insert_stmt (297)
    on left: 174 192 197, on right: 173
opt_ondupupdate (298)
    on left: 175 176, on right: 174 192 197 199 200 201
insert_opts (299)
    on left: 177 178 179 180 181, on right: 174 178 179 180 181 192
    197 199 200 201 205 206
opt_into (300)
    on left: 182 183, on right: 174 192 197 199 200 201
opt_col_names (301)
    on left: 184 185, on right: 174 197 199 201
insert_vals_list (302)
    on left: 186 187, on right: 174 187 199
insert_vals (303)
    on left: 188 189 190 191, on right: 186 187 190 191
insert_asgn_list (304)
    on left: 193 194 195 196, on right: 176 192 195 196 200
replace_stmt (305)
    on left: 199 200 201, on right: 198
update_stmt (306)
    on left: 203, on right: 202
update_opts (307)
    on left: 204 205 206, on right: 203
update_asgn_list (308)
    on left: 207 208 209 210, on right: 203 209 210
create_database_stmt (309)
    on left: 212 213, on right: 211
opt_if_not_exists (310)
    on left: 214 215, on right: 212 213 217 218 219 220 221 222
create_table_stmt (311)
    on left: 217 218 219 220 221 222, on right: 216
opt_temporary (312)
    on left: 223 224, on right: 217 218 219 220 221 222
create_col_list (313)
    on left: 225 226, on right: 217 218 219 221 226
create_definition (314)
    on left: 227 228 229 230 231 233, on right: 225 226
$@1 (315)
    on left: 232, on right: 233
column_atts (316)
    on left: 234 235 236 237 238 239 240 241 242 243 244 245 246, on right:
    233 235 236 237 238 239 240 241 242 243 244 245 246
opt_length (317)
    on left: 247 248 249, on right: 258 259 260 261 262 263 264 265
    266 267 268 274 276
opt_binary (318)
    on left: 250 251, on right: 282 283 284 285
opt_uz (319)
    on left: 252 253 254, on right: 253 254 259 260 261 262 263 264
    265 266 267 268
opt_csc (320)
    on left: 255 256 257, on right: 256 257 274 275 282 283 284 285
    286 287
data_type (321)
    on left: 258 259 260 261 262 263 264 265 266 267 268 269 270 271
    272 273 274 275 276 277 278 279 280 281 282 283 284 285 286 287,
    on right: 233
enum_list (322)
    on left: 288 289, on right: 286 287 289
create_select_statement (323)
    on left: 290, on right: 219 220 221 222
opt_ignore_replace (324)
    on left: 291 292 293, on right: 290
set_stmt (325)
    on left: 295, on right: 294
set_list (326)
    on left: 296 297, on right: 295 297
set_expr (327)
    on left: 298 299, on right: 296 297


State 0

    0 $accept: . stmt_list $end

    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt_list             转到状态 8
    stmt                  转到状态 9
    select_stmt           转到状态 10
    delete_stmt           转到状态 11
    insert_stmt           转到状态 12
    replace_stmt          转到状态 13
    update_stmt           转到状态 14
    create_database_stmt  转到状态 15
    create_table_stmt     转到状态 16
    set_stmt              转到状态 17


State 1

  212 create_database_stmt: CREATE . DATABASE opt_if_not_exists NAME
  213                     | CREATE . SCHEMA opt_if_not_exists NAME
  217 create_table_stmt: CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')'
  218                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')'
  219                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '(' create_col_list ')' create_select_statement
  220                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME create_select_statement
  221                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME '(' create_col_list ')' create_select_statement
  222                  | CREATE . opt_temporary TABLE opt_if_not_exists NAME '.' NAME create_select_statement

    DATABASE   shift, and go to state 18
    SCHEMA     shift, and go to state 19
    TEMPORARY  shift, and go to state 20

    $default  reduce using rule 223 (opt_temporary)

    opt_temporary  转到状态 21


State 2

  162 delete_stmt: DELETE . delete_opts FROM NAME opt_where opt_orderby opt_limit
  167            | DELETE . delete_opts delete_list FROM table_references opt_where
  172            | DELETE . delete_opts FROM delete_list USING table_references opt_where

    $default  reduce using rule 166 (delete_opts)

    delete_opts  转到状态 22


State 3

  174 insert_stmt: INSERT . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  192            | INSERT . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  197            | INSERT . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 177 (insert_opts)

    insert_opts  转到状态 23


State 4

  199 replace_stmt: REPLACE . insert_opts opt_into NAME opt_col_names VALUES insert_vals_list opt_ondupupdate
  200             | REPLACE . insert_opts opt_into NAME SET insert_asgn_list opt_ondupupdate
  201             | REPLACE . insert_opts opt_into NAME opt_col_names select_stmt opt_ondupupdate

    $default  reduce using rule 177 (insert_opts)

    insert_opts  转到状态 24


State 5

   83 select_stmt: SELECT . select_opts select_expr_list
   84            | SELECT . select_opts select_expr_list FROM table_references opt_where opt_groupby opt_having opt_orderby opt_limit opt_into_list

    $default  reduce using rule 107 (select_opts)

    select_opts  转到状态 25


State 6

  295 set_stmt: SET . set_list

    USERVAR  shift, and go to state 26

    set_list  转到状态 27
    set_expr  转到状态 28


State 7

  203 update_stmt: UPDATE . update_opts table_references SET update_asgn_list opt_where opt_orderby opt_limit

    NAME      reduce using rule 204 (update_opts)
    '('       reduce using rule 204 (update_opts)
    $default  reduce using rule 177 (insert_opts)

    insert_opts  转到状态 29
    update_opts  转到状态 30


State 8

    0 $accept: stmt_list . $end
    2 stmt_list: stmt_list . stmt ';'

    $end     shift, and go to state 31
    CREATE   shift, and go to state 1
    DELETE   shift, and go to state 2
    INSERT   shift, and go to state 3
    REPLACE  shift, and go to state 4
    SELECT   shift, and go to state 5
    SET      shift, and go to state 6
    UPDATE   shift, and go to state 7

    stmt                  转到状态 32
    select_stmt           转到状态 10
    delete_stmt           转到状态 11
    insert_stmt           转到状态 12
    replace_stmt          转到状态 13
    update_stmt           转到状态 14
    create_database_stmt  转到状态 15
    create_table_stmt     转到状态 16
    set_stmt              转到状态 17


State 9

    1 stmt_list: stmt . ';'

    ';'  shift, and go to state 33


State 10

   82 stmt: select_stmt .

    $default  reduce using rule 82 (stmt)


State 11

  161 stmt: delete_stmt .

    $default  reduce using rule 161 (stmt)


State 12

  173 stmt: insert_stmt .

    $default  reduce using rule 173 (stmt)


State 13

  198 stmt: replace_stmt .

    $default  reduce using rule 198 (stmt)


State 14

  202 stmt: update_stmt .

    $default  reduce using rule 202 (stmt)


State 15

  211 stmt: create_database_stmt .

    $default  reduce using rule 211 (stmt)


State 16

  216 stmt: create_table_stmt .

    $default  reduce using rule 216 (stmt)


State 17

  294 stmt: set_stmt .

    $default  reduce using rule 294 (stmt)


State 18

  212 create_database_stmt: CREATE DATABASE . opt_if_not_exists NAME

    IF  shift, and go to state 34

    $default  reduce using rule 214 (opt_if_not_exists)

    opt_if_not_exists  转到状态 35


State 19

  213 create_database_stmt: CREATE SCHEMA . opt_if_not_exists NAME

    IF  shift, and go to state 34

    $default  reduce using rule 214 (opt_if_not_exists)

    opt_if_not_exists  转到状态 36


State 20

  224 opt_temporary: TEMPORARY .

    $default  reduce using rule 224 (opt_temporary)


State 21
